--- a/backend/beetup-backend.cabal
+++ b/backend/beetup-backend.cabal
@@ -11,10 +11,16 @@ common warnings
     ghc-options: -Wall
 
 executable beetup-backend
-    import:           warnings
-    main-is:          Main.hs
+    import:             warnings
+    main-is:            Main.hs
     -- other-modules:
-    -- other-extensions:
-    build-depends:    base ^>=4.17.2.1
-    hs-source-dirs:   app
-    default-language: Haskell2010
+    default-extensions: OverloadedStrings
+    build-depends:      base ^>=4.17.2.1
+                      , twain
+                      , warp
+                      , text
+                      , containers
+                      , aeson
+                      , http-types
+    hs-source-dirs:     app
+    default-language:   Haskell2010
