--- a/backend/beetup-backend.cabal
+++ b/backend/beetup-backend.cabal
@@ -8,13 +8,14 @@ category:           Web
 build-type:         Simple
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -Wno-name-shadowing
 
 executable beetup-backend
     import:             warnings
     main-is:            Main.hs
     -- other-modules:
     default-extensions: OverloadedStrings
+                      , ViewPatterns
     build-depends:      base ^>=4.17.2.1
                       , twain
                       , warp
@@ -22,5 +23,7 @@ executable beetup-backend
                       , containers
                       , aeson
                       , http-types
+                      , HDBC
+                      , HDBC-sqlite3
     hs-source-dirs:     app
     default-language:   Haskell2010
