--- a/backend/beetup-backend.cabal
+++ b/backend/beetup-backend.cabal
@@ -2,7 +2,7 @@ cabal-version:      3.0
 name:               beetup-backend
 version:            0.1.0.0
 license:            NONE
-author:             Job Vonk
+author:             Job Vonk, Silas Peters, Jort Willemsen
 maintainer:         sticcpistt@icloud.com
 category:           Web
 build-type:         Simple
@@ -18,6 +18,8 @@ executable beetup-backend
                       , Utils.Functions
                       , Presentation.Authentication
                       , Presentation.User
+    									, Availability
+                      , Availability.Parse
     default-extensions: OverloadedStrings
                       , ViewPatterns
                       , DuplicateRecordFields
@@ -35,5 +37,8 @@ executable beetup-backend
                       , mtl
                       , password
                       , uuid
+											, iCalendar >= 0.4.1.1
+                      , bytestring
+                      , data-default
     hs-source-dirs:     src
     default-language:   Haskell2010
