--- a/backend/beetup-backend.cabal
+++ b/backend/beetup-backend.cabal
@@ -19,6 +19,7 @@ executable beetup-backend
                       , Integration.Init
                       , Utils.Datatypes
                       , Utils.Functions
+                      , Utils.Endpoint
                       , Presentation.Authentication
                       , Presentation.User
                       , Presentation.Calendar
@@ -46,5 +47,8 @@ executable beetup-backend
                       , iCalendar >= 0.4.1.1
                       , bytestring
                       , data-default
+                      , monad-logger
+                      , resource-pool
+                      , conduit
     hs-source-dirs:     src
     default-language:   Haskell2010
