--- a/backend/beetup-backend.cabal
+++ b/backend/beetup-backend.cabal
@@ -52,3 +52,20 @@ executable beetup-backend
                       , conduit
     hs-source-dirs:     src
     default-language:   Haskell2010
+
+test-suite beetup-backend-test
+  type: exitcode-stdio-1.0
+  main-is: test.hs
+  other-modules:
+      HelperFunctions
+      AvailabilityTests
+  hs-source-dirs: test
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      Unique >=0.4.7.9
+    , base >=4.7 && <5
+    , containers >=0.7
+    , beetup-backend
+    , tasty >=1.5.3
+    , tasty-quickcheck >=0.1.11.1
+  default-language: Haskell2010
