--- a/backend/beetup-backend.cabal
+++ b/backend/beetup-backend.cabal
@@ -75,7 +75,9 @@ test-suite beetup-backend-test
   main-is: test.hs
   other-modules:
       HelperFunctions
-      AvailabilityTests
+      TimeSlotTests
+      Arbitraries
+      Generators
   hs-source-dirs: test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
@@ -85,4 +87,5 @@ test-suite beetup-backend-test
     , beetup-backend
     , tasty >=1.5.3
     , tasty-quickcheck >=0.1.11.1
+    , time
   default-language: Haskell2010
