--- a/backend/beetup-backend.cabal
+++ b/backend/beetup-backend.cabal
@@ -77,7 +77,6 @@ test-suite beetup-backend-test
       HelperFunctions
       TimeSlotTests
       Arbitraries
-      Generators
   hs-source-dirs: test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
@@ -88,4 +87,5 @@ test-suite beetup-backend-test
     , tasty >=1.5.3
     , tasty-quickcheck >=0.1.11.1
     , time
+    , text
   default-language: Haskell2010
