--- a/backend/beetup-backend.cabal
+++ b/backend/beetup-backend.cabal
@@ -76,6 +76,7 @@ test-suite beetup-backend-test
   other-modules:
       HelperFunctions
       TimeSlotTests
+      AvailabilityTests
       Arbitraries
   hs-source-dirs: test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
